--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html, body {
     border: 0;
     padding: 0;
     margin: 0;
-    height: 100%;
+    min-height: 100vh
 }
 
 body {
@@ -12,11 +12,7 @@ body {
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
-    -webkit-flex-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-    justify-content: center;
+    justify-content: center;    
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     background-color: #171717 !important;
@@ -24,23 +20,30 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
     font-size: 1.5rem;
     line-height: 1.6;
+    align-items: center;
     word-break: break-word;
 }
 
 section {
-    max-width: calc(720px + 10vw);
+    padding: 2em  0;
+    max-width: calc(720px + 5vw);
+    
+}
+
+img {
+    pointer-events: none;
 }
 
 .container {
     text-align: center;
-    padding: 0 10vw 0 10vw;
+    padding: 0 5vw 0 5vw;
 }
 
 h1 {
     font-size: 4rem;
     letter-spacing: -.1rem;
     line-height: 1.2;
-    margin-bottom: 0;
+    margin: 0;
 }
 
 .bio { 
@@ -50,10 +53,10 @@ h1 {
 
 .links {
     font-size: 1.8rem;
-    margin-top: 3rem;
+    margin: 2rem 0;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     width: 100%;
 }
@@ -77,8 +80,11 @@ h1 {
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
-    width: 40%;
+    min-width: 20%;
+    width: 15vh;
+    max-width: 45%;
     will-change: transform;
+    margin: 0 10px;
 }
 
 .button:disabled {
@@ -101,6 +107,8 @@ footer {
     margin-top: 2em;
     padding-bottom: 6rem;
     padding-top: 4.5rem;
+    position: absolute;
+    bottom: 0;
     text-align: center;
 }
 
